[project]
name = "eccen_adjust"
version = "0.2.0"
description = """The eccentricity adjustment package."""
authors = [
    {name="Hugo T. Chow-Wing-Bom", email="hugo.chow-wing-bom.15@ucl.ac.uk"},
    {name="Noah C. Benson", email="nben@uw.edu"}]
license = {"text"="MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    'numpy >= 1.24.0',
    'scipy >= 1.7.0',
    'pandas >= 2.2.0',
    'matplotlib >= 3.9.0',
    'torch >= 2.3.0',
    'neuropythy >= 0.12.16']

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
homepage = "https://github.com/hugocwb/StructuralMRI"
